; ModuleID = '/home/carl/AnghaBench/kphp-kdb/news/extr_news-data.c_do_process_news_notify.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/news/extr_news-data.c_do_process_news_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_news_notify = type { i32, i32, i32, i32, i32, i32 }

@NOTIFY_MODE = common dso_local global i32 0, align 4
@LEV_NEWS_NOTIFY = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [41 x i8] c"created news item type %08x, user_id=%d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_process_news_notify(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.lev_news_notify*, align 8
  store i32 %0, i32* %8, align 4
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %15 = load i32, i32* %8, align 4
  %16 = call i64 @conv_uid(i32 %15)
  %17 = icmp slt i64 %16, 0
  br i1 %17, label %25, label %18

18:                                               ; preds = %6
  %19 = load i32, i32* @NOTIFY_MODE, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %25

21:                                               ; preds = %18
  %22 = load i32, i32* %9, align 4
  %23 = call i32 @valid_type(i32 %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %26, label %25

25:                                               ; preds = %21, %18, %6
  store i32 -1, i32* %7, align 4
  br label %54

26:                                               ; preds = %21
  %27 = load i64, i64* @LEV_NEWS_NOTIFY, align 8
  %28 = load i32, i32* %9, align 4
  %29 = sext i32 %28 to i64
  %30 = add nsw i64 %27, %29
  %31 = load i32, i32* %8, align 4
  %32 = call %struct.lev_news_notify* @alloc_log_event(i64 %30, i32 24, i32 %31)
  store %struct.lev_news_notify* %32, %struct.lev_news_notify** %14, align 8
  %33 = load i32, i32* %10, align 4
  %34 = load %struct.lev_news_notify*, %struct.lev_news_notify** %14, align 8
  %35 = getelementptr inbounds %struct.lev_news_notify, %struct.lev_news_notify* %34, i32 0, i32 0
  store i32 %33, i32* %35, align 4
  %36 = load i32, i32* %11, align 4
  %37 = load %struct.lev_news_notify*, %struct.lev_news_notify** %14, align 8
  %38 = getelementptr inbounds %struct.lev_news_notify, %struct.lev_news_notify* %37, i32 0, i32 1
  store i32 %36, i32* %38, align 4
  %39 = load i32, i32* %12, align 4
  %40 = load %struct.lev_news_notify*, %struct.lev_news_notify** %14, align 8
  %41 = getelementptr inbounds %struct.lev_news_notify, %struct.lev_news_notify* %40, i32 0, i32 2
  store i32 %39, i32* %41, align 4
  %42 = load i32, i32* %13, align 4
  %43 = load %struct.lev_news_notify*, %struct.lev_news_notify** %14, align 8
  %44 = getelementptr inbounds %struct.lev_news_notify, %struct.lev_news_notify* %43, i32 0, i32 3
  store i32 %42, i32* %44, align 4
  %45 = load %struct.lev_news_notify*, %struct.lev_news_notify** %14, align 8
  %46 = getelementptr inbounds %struct.lev_news_notify, %struct.lev_news_notify* %45, i32 0, i32 5
  %47 = load i32, i32* %46, align 4
  %48 = load %struct.lev_news_notify*, %struct.lev_news_notify** %14, align 8
  %49 = getelementptr inbounds %struct.lev_news_notify, %struct.lev_news_notify* %48, i32 0, i32 4
  %50 = load i32, i32* %49, align 4
  %51 = call i32 @vkprintf(i32 2, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i32 %47, i32 %50)
  %52 = load %struct.lev_news_notify*, %struct.lev_news_notify** %14, align 8
  %53 = call i32 @process_news_notify(%struct.lev_news_notify* %52)
  store i32 %53, i32* %7, align 4
  br label %54

54:                                               ; preds = %26, %25
  %55 = load i32, i32* %7, align 4
  ret i32 %55
}

declare dso_local i64 @conv_uid(i32) #1

declare dso_local i32 @valid_type(i32) #1

declare dso_local %struct.lev_news_notify* @alloc_log_event(i64, i32, i32) #1

declare dso_local i32 @vkprintf(i32, i8*, i32, i32) #1

declare dso_local i32 @process_news_notify(%struct.lev_news_notify*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
